--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,27 @@
 {
-    "config": {
-        "vendor-dir": "MTM"
-    },
-    "repositories": [
-        {
-            "type": "package",
-            "package": {
-                "name": "Async",
-                "version": "0.0.1",
-                "dist": {
-                    "url": "http://plugins.symfony-project.org/get/sfGuardPlugin/sfGuardPlugin-4.0.2.tgz",
-                    "type": "tar"
-                }
-            }
-        }
-    ],
-    "require": {
-        "sfGuardPlugin": "4.0.*"
-    }
+	"name" : "MTM/Async",
+	"type" : "library",
+	"description" : "Async tools for PHP 7",
+	"keywords" : [
+		"async",
+		"threads",
+		"wrapper"
+	],
+	"homepage" : "https://github.com/merlinthemagic/MTM-Async",
+	"license" : "MIT",
+	"authors" : [{
+			"name" : "Jordi Boggiano",
+			"email" : "j.boggiano@seld.be",
+			"homepage" : "http://seld.be",
+			"role" : "Developer"
+		}
+	],
+	"require" : {
+		"php" : ">=5.3.0"
+	},
+	"autoload" : {
+		"psr-0" : {
+			"Monolog" : "src"
+		}
+	}
 }
