--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,20 @@
 		"wrapper"
 	],
 	"homepage" : "https://github.com/merlinthemagic/MTM-Async",
-	"license" : "MIT",
+	"license" : "LGPL-3.0",
 	"authors" : [{
-			"name" : "Jordi Boggiano",
-			"email" : "j.boggiano@seld.be",
-			"homepage" : "http://seld.be",
+			"name" : "Martin Peter Madsen",
+			"email" : "dev@mrtinpetermadsen.com",
 			"role" : "Developer"
 		}
 	],
 	"require" : {
-		"php" : ">=5.3.0"
+		"php" : ">=7.3.0"
 	},
 	"autoload" : {
-		"psr-0" : {
-			"Monolog" : "src"
-		}
-	}
+		"files" : [
+			"./Enable.php"
+		]
+	},
+	"minimum-stability" : "dev"
 }
