--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name" : "MTM/Async",
+	"name" : "merlinthemagic/Async",
 	"type" : "library",
 	"description" : "Async tools for PHP 7",
 	"keywords" : [
@@ -22,6 +22,9 @@
 		"files" : [
 			"./Enable.php"
 		]
+	},
+	"config" : {
+		"vendor-dir" : "MTM"
 	},
 	"minimum-stability" : "dev"
 }
