--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 	"license" : "LGPL-3.0",
 	"authors" : [{
 			"name" : "Martin Peter Madsen",
-			"email" : "dev@mrtinpetermadsen.com",
+			"email" : "dev@martinpetermadsen.com",
 			"role" : "Developer"
 		}
 	],
