initial with dependencies

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"name" : "merlinthemagic/mtm-async",
 	"type" : "library",
 	"description" : "Async tools for PHP 7",
+	"version" : "0.0.1",
 	"keywords" : [
 		"async",
 		"threads",
@@ -16,7 +17,8 @@
 		}
 	],
 	"require" : {
-		"php" : ">=7.3.0"
+		"php" : ">=7.3.0",
+		"merlinthemagic/mtm-utilities" : ">=0.0.1"
 	},
 	"autoload" : {
 		"files" : [
